--- a/src/scss/partials/_map.scss
+++ b/src/scss/partials/_map.scss
@@ -1,5 +1,10 @@
-/* todo: style pop up text */
 /* todo: make fun pop up animation */
+#mapBox {
+	height: 70vh;
+	width: 100%;
+	border-radius: $size200;
+}
+
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
   background-color: var(--green200);
