Added site description

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#10413b" />
+  <meta name="description" content="Blewett Community Business website was created with love by the community for the community. Sponsored by Rooted Shala Physiotherapy and Agata Zurek Web Development. It is designed to be used by locals and visitors alike to keep the economy local and sustainable and to continue the support for local and small businesses.">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/static/css/reset.css">
   <link rel="stylesheet" href="/static/css/style.css">
