Added category icons

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,8 +9,9 @@
 @import 'partials/search';
 @import 'partials/listings';
 @import 'partials/categories';
-// @import 'partials/cutout';
+@import 'partials/cutout';
 @import 'partials/waves';
+@import 'partials/parallax';
 
 @import 'partials/map';
 
