--- a/src/scss/partials/_cutout.scss
+++ b/src/scss/partials/_cutout.scss
@@ -3,22 +3,15 @@
 // todo: fix view on safari
 
 .card .business-icon {
-	stroke: $blue500;
-	width: 4.1rem;
-	height: 4.1rem;
+	width: 26px;
+	height: 26px;
 	position: relative;
-	margin-top: -3.9rem;
+	margin-top: -46px;
 	margin-right: auto;
 	margin-left: auto;
-	
-	border-radius: 50%;
-	background-color: $white;
+	background-color: transparent;
 	z-index: 1;
-	/* object-fit: contain; */
-	/* filter: drop-shadow(1px 1px 3px $blue900;  */
-	
-	/* margin-bottom: $size200; */
-	/* padding: 0.2rem; */
+	transform: scale(2.6);
 }
 
 .card:after {
