Added footer site description. Fixed waves.

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,4 +1,5 @@
-<footer class="">
+<footer>
   {% include './waves.html' %}
-  <p class="web-credit">website made with love by <a href="http://agatazurek.com/">Agata Zurek</a>.</p>
+  <p>Blewett Community Directory website was created with love by the community for the community. Sponsored by Rooted Shala Physiotherapy and Agata Zurek Web Development. It is designed to be used by locals and visitors alike to keep the economy local and sustainable and to support local and small businesses.</p>
+  <p>website made by <a href="http://agatazurek.com/">Agata Zurek</a> with 🍫 and ☕ and <a href="https://www.11ty.dev/">11ty</a>.</p>
 </footer>
