--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -4,11 +4,13 @@ $auto-grid-min-size: 300px;
 
 	/* Major third type scale */
 	$size200: $size-base * 0.8;
+	$size300: $size-base * 1;
 	$size400: $size-base * 1.25;
 	$size500: $size-base * 1.563;
 	$size600: $size-base * 1.953;
 	$size700: $size-base * 2.441;
 	$size800: $size-base * 3.052;
+	$size900: $size-base * 3.815;
 
 	$blue900: #003d52;
 	$blue800: #005875;
