--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,7 @@
 @import 'partials/categories';
 @import 'partials/cutout';
 @import 'partials/waves';
-@import 'partials/parallax';
+// @import 'partials/parallax';
 
 @import 'partials/map';
 
@@ -19,7 +19,3 @@
 /** {
 	border: 1px solid red;
 }*/
-
-// @media (min-width: 600px) {
-// 	// $size-base: 17px;
-// }
