--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -120,7 +120,7 @@ select {
 .auto-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 41.497px 26.571px;
+  gap: 51.884px 33.201px;
 }
 @media (min-width: 600px) {
   .auto-grid {
@@ -169,11 +169,14 @@ header > * + * {
 
 footer {
   margin-top: auto;
+  padding-top: 64.855px;
 }
-footer p:last-child {
+footer p {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 21.25px;
+  padding-bottom: 51.884px;
+  padding-left: 13.6px;
+  padding-right: 13.6px;
 }
 
 @media (min-width: 600px) {
@@ -226,9 +229,7 @@ article p, article a {
   padding: 0 17px;
   text-decoration: none;
 }
-
-.main-nav a:hover,
-.main-nav a:focus {
+.main-nav a:hover, .main-nav a:focus {
   color: #3d9967;
   text-decoration: underline;
 }
@@ -247,7 +248,6 @@ header .active {
   color: #007297;
   letter-spacing: 1.8px;
   font-weight: 700;
-  margin: 33.201px 0 13.6px;
   /* max-width: 12ch;
   word-wrap: normal; */
 }
@@ -312,11 +312,13 @@ details[open] summary {
   position: relative;
   padding: 33.201px;
   text-align: left;
-  background-color: #f6fbef;
   border: 2px solid #90cd5f;
-  box-shadow: 3px 4px 6px -2px #b9e3e7, -3px 4px 6px -2px #b9e3e7;
   align-content: stretch;
   justify-content: start;
+}
+
+.business-category {
+  margin: 41.497px 0 13.6px;
 }
 
 .contact-icon {
@@ -335,10 +337,6 @@ details[open] summary {
   stroke: #007297;
 }
 
-.business-info, .business-category {
-  padding-left: 21.25px;
-}
-
 .business-info > * + * {
   margin-top: 1rem;
 }
@@ -351,6 +349,10 @@ details[open] summary {
 @media (min-width: 600px) {
   .flex.card {
     flex-wrap: nowrap;
+  }
+
+  .business-info, .business-category {
+    padding-left: 21.25px;
   }
 
   .business-category {
@@ -367,7 +369,7 @@ details[open] summary {
 #category-list {
   justify-content: center;
   color: #f6fbef;
-  margin-bottom: 51.884px;
+  margin-bottom: 64.855px;
 }
 
 .category-link {
@@ -425,8 +427,35 @@ li:nth-child(5n) .category-link:hover, li:nth-child(5n) .category-link:focus, li
     padding: 4.25px 8.5px;
   }
 }
+/* Rounded SVG category icon and matching cutout */
+/* Adapted from Stephanie Eckles https://thinkdobecreate.com/ */
+.card .business-icon {
+  width: 26px;
+  height: 26px;
+  position: relative;
+  margin-top: -46px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: transparent;
+  z-index: 1;
+  transform: scale(2.6);
+}
+
+.card:after {
+  position: absolute;
+  content: "";
+  top: -2px;
+  right: 50%;
+  width: 7.26rem;
+  height: 4.1rem;
+  transform: translateX(50%);
+  background-image: radial-gradient(circle at top, #f6fbef 50%, #90cd5f 51%);
+  clip-path: circle(50% at 50% 0);
+}
+
 footer {
-  overflow-x: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 footer p {
@@ -434,27 +463,28 @@ footer p {
   z-index: 1;
 }
 
-svg#waves {
+.container-waves {
   width: 100vw;
-  overflow: visible;
+  position: absolute;
+  bottom: -10px;
   transform: scaleY(2);
 }
 
 .wave {
   fill: #7bcbdf;
   opacity: 0.4;
-  animation: wave 16s linear;
+  animation: wave 20s linear;
   animation-iteration-count: infinite;
 }
 
 #wave2 {
   fill: var(#3eb3d7);
-  animation-duration: 20s;
+  animation-duration: 30s;
 }
 
 #wave3 {
   fill: var(#009acf);
-  animation-duration: 30s;
+  animation-duration: 40s;
 }
 
 @keyframes wave {
@@ -463,7 +493,7 @@ svg#waves {
   }
 }
 @media (min-width: 900px) {
-  svg#waves {
+  .container-waves {
     transform: scaleY(1);
   }
 }
@@ -476,17 +506,17 @@ svg#waves {
 
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
-  background-color: var(--green200);
+  background-color: #c3e4a7;
 }
 
 .leaflet-popup-content {
   font-family: "Cabin", sans-serif;
-  font-size: var(--size-base);
-  color: var(--green900);
+  font-size: 17px;
+  color: #10413b;
 }
 
 .leaflet-container a.leaflet-popup-close-button {
-  color: var(--blue800);
+  color: #005875;
 }
 
 /*  this is a guide for placement */
