--- a/src/_includes/partials/svg-icons.html
+++ b/src/_includes/partials/svg-icons.html
@@ -48,6 +48,7 @@
       <line x1="21" y1="21" x2="15" y2="15" />
     </symbol>
     <!-- Business Category Icons by Jemis Mali https://iconscout.com/contributors/jemismali/icons -->
+    <!-- All icons resized to 26px x 26px for easy, uniform scaling -->
     <symbol id="accommodation">
       <circle cx="13" cy="13" r="13" fill="#5ab65f" fill-rule="evenodd"/>
       <path d="M5.7 7.6c-.5 0-.8.4-.8.8v9.2a.3.3 0 10.5 0v-.8h16.3v.8a.3.3 0 10.5 0V13a1 1 0 00-1-1 1 1 0 00-1.2-1.2H8.7a1 1 0 00-.9-.5H6.5v-2c0-.3-.4-.7-.8-.7zm0 .5c.1 0 .2.1.2.3v6.2h-.5V8.4c0-.2.1-.3.3-.3zm1 2.7h1.1c.2 0 .3.1.3.3v.8H6.5v-.8c0-.2 0-.3.3-.3zm2 .6H20c.4 0 .6.2.6.5h-12zm-2.2 1h1.8a.3.3 0 00.1 0h12.7c.4 0 .6.3.6.6v1.6H6.5zm-1.1 2.8h16.3v1H5.4z" overflow="visible" fill="#fff"/>
@@ -56,6 +57,12 @@
       <g transform="matrix(.54237 0 0 .54237 0 -544.8)">
         <circle cx="24" cy="1028.4" r="24" fill=" #1f7c6f"/>
         <path d="M10.5 1014.4c-.4 0-.8.1-1 .4-.7.6-.6 1.6 0 2.2l11.7 11.7-.7.8a.5.5 0 00.2.8l1.5.5c-.1.5 0 1 .5 1.5.4.4 1 .6 1.5.4v.4l.8 9.8a.5.5 0 00.5.5 12.6 12.6 0 003.6-.6.5.5 0 00.4-.5l-.2-1.8 1.5 1.3a.5.5 0 00.6 0l1-.5a12.5 12.5 0 005.6-10.5.5.5 0 00-.5-.5l-9.7-.8h-.5c.2-.5 0-1-.4-1.5-.4-.4-1-.5-1.5-.4l-.5-1.5a.5.5 0 00-.5-.3.5.5 0 00-.3.1l-.7.7-11.8-11.7c-.3-.3-.7-.5-1-.5zm0 1c.1 0 .3 0 .4.2l11.8 11.7-.4.4-.3.3-11.8-11.7c-.3-.3-.3-.6 0-.8l.3-.1zm8 0a.5.5 0 100 1 .5.5 0 000-1zm-4 0a.5.5 0 000 1h2a.5.5 0 100-1h-2zm2 2a.5.5 0 100 1h4a.5.5 0 100-1h-4zm7.7 9.8l.4 1-1.7 1.7-1-.3.4-.5.7-.7.7-.7.5-.5zm1.6 1.4l.4.1c.2.3.2.5.1.6l-2.3 2.4c-.1 0-.4.1-.6-.1-.3-.3-.3-.5-.1-.6v-.1a.5.5 0 00.1 0l2-2.1a.5.5 0 00.1 0v-.2h.3zm.8 1.8l1.2.1 9 .8a11.5 11.5 0 01-5 9.1l-.6.4-1.9-1.6-.2-.2a.5.5 0 00-.9.2V1039.9l.2 2.2-.7.1c-.6.2-1.2.2-1.8.2a690.5 690.5 0 01-.7-10.3.5.5 0 000-.2l1.4-1.4zm.7 1a.5.5 0 000 1l7.7.7a.5.5 0 10.1-1l-7.8-.7z" fill="#fff"/>
+      </g>
+    </symbol>
+    <symbol id="contractors">
+      <g transform="translate(-1.24 -1.36)">
+        <circle cx="14.24" cy="14.36" r="12.93" fill="#007297" fill-rule="evenodd"/>
+        <path d="M18.5 7.91a2.51 2.51 0 00-2.46 2.95l-1.89 1.9-1.05-1.05.48-.46.02-.04c.42-.56.46-1.26.12-1.77l-.03-.05-1.06-1.05-.03-.03a1.59 1.59 0 00-.95-.32c-.33 0-.66.12-.9.37l-2.46 2.46-.04.07c-.1.2-.25.46-.25.82v1.4c0 .37.15.63.25.83l.04.07.28.28.03.02c.56.42 1.36.45 1.85-.04l.5-.48L12 14.9l-1.15 1.16a2.47 2.47 0 00-2.1.7 2.47 2.47 0 000 3.5c.97.98 2.53.98 3.5 0 .58-.57.8-1.35.7-2.1l1.15-1.14 3.55 3.55a1.5 1.5 0 002.1 0 1.5 1.5 0 000-2.1l-3.54-3.56 2.02-2.02.27.02c1.37 0 2.5-1.12 2.5-2.5 0-.4-.13-.75-.23-1.05a.5.5 0 00-.82-.2l-.96.95h-.3v-.19l.96-.95a.5.5 0 00-.13-.8 2.3 2.3 0 00-1.02-.26zM11.67 9c.1 0 .2.04.32.12l.9.9c.05.08.08.36-.09.6l-3.05 2.95c-.1.1-.3.13-.54-.05l-.09-.08a1.71 1.71 0 01-.12-.32v-1.4c0-.03.05-.16.12-.31l2.33-2.33a.3.3 0 01.22-.08zm6.47.07l-.3.3a.5.5 0 00-.14.35v.9c0 .28.22.5.5.5h1a.5.5 0 00.35-.14l.38-.37c-.1.72-.67 1.31-1.43 1.31a1.5 1.5 0 01-1.42-1.03l-.05-.18a1.5 1.5 0 01-.03-.29c0-.68.51-1.17 1.14-1.35zm-1.67 2.8c.19.26.43.49.71.67l-4.61 4.61a2.56 2.56 0 00-.3-.36l-.02-.02a2.53 2.53 0 00-.38-.31l4.6-4.6zm-4.07.56l1.04 1.04-.73.74-1.01-1.08zm3.1 3.2l3.55 3.55c.22.22.22.47 0 .69-.23.22-.47.22-.7 0l-3.54-3.55zm-5 1.38l.12.01.22.08c.2.06.45.22.73.4l.14.16c.06.12.14.29.22.52l.07.23c.04.4-.1.82-.45 1.16a1.4 1.4 0 01-2.1 0 1.4 1.4 0 010-2.1c.31-.3.68-.46 1.05-.46zm0 .91a.6.6 0 100 1.2.6.6 0 000-1.2z" fill="#fff"/>
       </g>
     </symbol>
     <symbol id="farm">
