--- a/src/_includes/partials/svg-icons.html
+++ b/src/_includes/partials/svg-icons.html
@@ -89,6 +89,12 @@
       <path d="M21.13 5.95c0-.6-.48-1.08-1.08-1.08h-6.43c-.57 0-1.12-.03-1.44.29l-9.83 9.82a.82.82 0 000 1.16l7.51 7.51c.32.32.84.32 1.16 0l9.82-9.83c.32-.31.3-.85.3-1.44V5.95z" stroke-miterlimit="10" fill="none" stroke="#fff" stroke-width=".77" stroke-linecap="round"/>
       <circle cx="18.07" cy="7.93" r="1.02" stroke-miterlimit="10" fill="none" stroke="#fff" stroke-width=".68" stroke-linecap="round"/>
     </symbol>
+    <symbol id="health">
+      <g fill="#fff" transform="translate(5 -1031.86)">
+        <circle cx="8" cy="1044.86" r="13" fill="#003d52"/>
+        <path d="M3.64 1038.04a4.36 4.36 0 00-4.4 4.37c.03 1.96 1.47 3.84 3.06 5.43 1.6 1.6 3.42 2.94 4.38 3.64l.31.2.32-.2c.96-.7 2.81-2.07 4.41-3.67l.46-.5-.42-.95-.07-.17a24.6 24.6 0 01-2.08 2.08c-.98.84-1.93 1.5-2.61 2a36.67 36.67 0 01-3.25-2.64l-.64-.6c-1.5-1.51-2.72-3.24-2.75-4.62a3.24 3.24 0 013.28-3.24c1.25 0 2.3.67 2.86 1.69l.5.92.49-.92a3.22 3.22 0 013.69-1.57 3.2 3.2 0 012.45 3.12l.88-1.34a4.39 4.39 0 00-4.16-3.03c-1.4 0-2.55.73-3.35 1.76a4.24 4.24 0 00-3.36-1.76zm7.45 2.52l-1.8 4.2-1.1-1.64-1.4 2.82H4.88v1.13h2.6l.86-1.7 1.16 1.75 1.59-3.7 1.6 3.73 1.33-2.11.6 2.03h2.15v-1.13h-1.3l-1.07-3.61-1.52 2.4z" overflow="visible"/>
+      </g>
+    </symbol>
     <symbol id="music">
       <g fill="#fff">
         <circle cx="37" cy="28.4" r="12.5" fill-rule="evenodd" fill=" #1f7c6f" transform="matrix(1.04 0 0 1.04 -25.5 -16.5)"/>
