--- a/src/_includes/partials/svg-icons.html
+++ b/src/_includes/partials/svg-icons.html
@@ -130,11 +130,11 @@
         <path d="M16.2 1014a.5.5 0 00-.6 0l-5.1 3a.5.5 0 00-.3.3l-.3 2.3a.5.5 0 00.5.6l1.6-.1-.3 1.7a.5.5 0 00.5.6l1.6-.1-.3 1.7a.5.5 0 00.6.5h1.5l-.3 1.7a.5.5 0 00.6.5h1.5l-.2 1.7a.5.5 0 00.5.5h1.5l-.2 1.6a.5.5 0 00.5.6H21l-.2 1.6a.5.5 0 00.5.6h1.5l-.2 1.6a.5.5 0 00.1.4l.1.1a.5.5 0 00.4.2h2.6l-.5 3.3.6 1 1 1.7c.5.7 1.4 1 2 .6l3-1.4 1.9-4.3 1.6-1c.4-.2.6-.7.6-1.1 0-.4-.2-.8-.5-1l-1.1-1.3-18.2-18zm-.4 1l13.9 13.9-3.5 3.4-.3 2.4h-2.3l.3-2a.5.5 0 00-.5-.5h-1.6l.3-1.6a.5.5 0 00-.6-.6H20l.3-1.6a.5.5 0 00-.6-.6l-1.5.1.3-1.7a.5.5 0 00-.6-.6l-1.5.1.2-1.7a.5.5 0 00-.5-.5h-1.5l.2-1.7a.5.5 0 00-.5-.5h-1.5l.2-1.7a.5.5 0 00-.5-.5H11l.2-1.4zm14.6 14.6l3 3 1.4 1.4.2.4v.3l-2 1-1.8 4.3-2.7 1.3c-.3.1-.5 0-.7-.2l-1-1.7-.4-.8.8-5.8zm2.2 3.7a.5.5 0 000-.1l-1.8-1a.5.5 0 00-.7.2l-2.5 4.3a.5.5 0 00.2.7l1.7 1a.5.5 0 00.7-.2l2.5-4.3a.5.5 0 000-.6zm-1 .5l-2 3.5-.9-.5 2-3.5 1 .5z" overflow="visible"  fill="#fff"/>
       </g>
     </symbol>
-    <svg id="yoga">
+    <symbol id="yoga">
       <g transform="translate(0 -1026.36)">
         <circle cx="657.05" cy="437.09" r="15.27" fill=" #003d52" fill-rule="evenodd" transform="translate(-546.46 667.2) scale(.85146)"/>
         <path fill="#fff" d="M13 1030.36a2.5 2.5 0 00-2.5 2.5 2.5 2.5 0 002.5 2.5 2.5 2.5 0 002.5-2.5 2.5 2.5 0 00-2.5-2.5zm0 1c.83 0 1.5.67 1.5 1.5 0 .84-.67 1.5-1.5 1.5a1.5 1.5 0 01-1.5-1.5c0-.83.67-1.5 1.5-1.5zm-.12 4.35c-.96.05-1.85.51-2.55 1.2a.5.5 0 00-.05.07l-3.12 4.37a1.2 1.2 0 00-.17 1.06c.12.35.4.62.74.78.69.31 1.54.2 2-.45l1.27-1.8v2.42H7.5c-.82 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5h11c.82 0 1.5-.68 1.5-1.5s-.68-1.5-1.5-1.5H15v-2.52l1.34 1.9c.45.64 1.3.76 2 .45.34-.16.61-.43.73-.78a1.2 1.2 0 00-.16-1.06l-3.13-4.37a.5.5 0 00-.05-.07 3.76 3.76 0 00-2.85-1.2zm.05 1c.67-.04 1.37.2 2.08.9l3.08 4.32c.05.08.05.1.03.16-.02.05-.07.13-.2.2-.28.12-.67.01-.76-.12l-2.25-3.19a.5.5 0 00-.91.29v4.59a.5.5 0 00.5.5h4c.29 0 .5.22.5.5 0 .29-.21.5-.5.5h-11a.49.49 0 01-.5-.5c0-.28.21-.5.5-.5h4a.5.5 0 00.5-.5v-4.5a.5.5 0 00-.9-.29l-2.2 3.1c-.1.13-.48.24-.76.11-.13-.06-.18-.14-.2-.19-.02-.05-.02-.08.03-.16l3.08-4.31c.55-.55 1.21-.88 1.88-.91z" overflow="visible"/>
       </g>
-    </svg>
+    </symbol>
   </defs>
 </svg>
