--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,8 +10,8 @@
 @import 'partials/listings';
 @import 'partials/categories';
 @import 'partials/cutout';
+@import 'partials/parallax';
 @import 'partials/waves';
-// @import 'partials/parallax';
 
 @import 'partials/map';
 
