Fixed background gradient to scroll and weird mtn repeat

--- a/src/_includes/partials/parallax.html
+++ b/src/_includes/partials/parallax.html
@@ -1,4 +1,5 @@
 
+	<div class="parallax-image parallax-background"></div>
 	<div class="parallax parallax-mtn1">
 		<div class="parallax-image mtn-1"></div>
 	</div>
