--- a/src/scss/partials/_parallax.scss
+++ b/src/scss/partials/_parallax.scss
@@ -1,82 +1,84 @@
-.parallax-container {
-  position: absolute;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: visible;
-  perspective: 8px;
-  perspective-origin: 0%;
-  display: flex;
-  flex-direction: column;
-  
-}
+@media (min-width: 600px) {
 
-.parallax {
-  transform-origin: left;
-  overflow-y: visible;
-}
+  .parallax-container {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: visible;
+    perspective: 8px;
+    perspective-origin: 0%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    // background: linear-gradient(to bottom, #b9e3e7 0%, #f6fbef 30%);
+  }
 
-.parallax-image {
-  overflow-y: visible;
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-  position: absolute;
-  left: 0;
-  width: 100vw;
-  height: 600px;
-}
+  .parallax {
+    transform-origin: left;
+    overflow-y: visible;
+  }
 
-.parallax-mtn1 {
-  transform: translateZ(1px) scale(1);
-  .mtn-1 {
-    background: url(../images/mtn1.svg);
-    top: 200px;
+  .parallax-image {
+    overflow-y: visible;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+    position: absolute;
+    left: 0;
+    width: 100vw;
+    height: 600px;
+  }
+  .parallax-background {
+    background: linear-gradient(to bottom, #b9e3e7 0%, #f6fbef 30%);
+  }
+  .parallax-mtn1 {
+    transform: translateZ(1px) scale(1);
+    .mtn-1 {
+      background: url(../images/mtn1.svg) repeat-x;
+      top: 200px;
+    }
+  }
+  .parallax-mtn2 {
+    transform: translateZ(1.5px) scale(1);
+    .mtn-2 {
+      background: url(../images/mtn2.svg) repeat-x;
+      top: 250px;
+    }
+  }
+  .parallax-fir {
+    transform: translateZ(2px) scale(0.9);
+    .fir {
+      background: url(../images/fir.svg) repeat-x;
+      background-size: auto 500px;
+      background-position: right;
+      top: 300px;
+    }
+  }
+  .parallax-larch {
+    transform: translateZ(2.5px) scale(1);
+    .larch {
+      background: url(../images/larch.svg) repeat-x;
+      background-size: auto 500px;
+      top: 300px;
+    }
+  }
+  .parallax-cedar {
+    transform: translateZ(3px) scale(0.7);
+      .cedar {
+      background: url(../images/cedar.svg) repeat-x;
+      background-size: auto 500px;
+      top: 600px;
+    }
+  }
+  .parallax-birch {
+    transform: translateZ(3.5px) scale(0.7);
+      .birch {
+      background: url(../images/birch.svg) repeat-x;
+      background-size: auto 500px;
+      background-position: left;
+      top: 640px;
+    }
   }
 }
-.parallax-mtn2 {
-  transform: translateZ(1.5px) scale(1);
-  .mtn-2 {
-    background: url(../images/mtn2.svg);
-    top: 250px;
-  }
-}
-.parallax-fir {
-  transform: translateZ(2px) scale(0.9);
-  .fir {
-    background: url(../images/fir.svg) repeat-x;
-    background-size: auto 500px;
-    background-position: right;
-    top: 300px;
-  }
-}
-.parallax-larch {
-  transform: translateZ(2.5px) scale(1);
-  .larch {
-    background: url(../images/larch.svg) repeat-x;
-    background-size: auto 500px;
-    top: 300px;
-  }
-}
-.parallax-cedar {
-  transform: translateZ(3px) scale(0.7);
-    .cedar {
-    background: url(../images/cedar.svg) repeat-x;
-    background-size: auto 500px;
-    top: 600px;
-  }
-}
-.parallax-birch {
-  transform: translateZ(3.5px) scale(0.7);
-    .birch {
-    background: url(../images/birch.svg) repeat-x;
-    background-size: auto 500px;
-    background-position: left;
-    top: 640px;
-  }
-}
- 
-  
-
-
