--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -146,12 +146,8 @@ select {
 /* MAIN PAGE STYLES */
 body {
   background-color: #f6fbef;
-  background: linear-gradient(to bottom, #b9e3e7 0%, #f6fbef 30%);
   color: #10413b;
   text-align: center;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
   font-size: 17px;
 }
 
@@ -458,89 +454,95 @@ li:nth-child(5n) .category-link:hover, li:nth-child(5n) .category-link:focus, li
   clip-path: circle(50% at 50% 0);
 }
 
-.parallax-container {
-  position: absolute;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: visible;
-  perspective: 8px;
-  perspective-origin: 0%;
-  display: flex;
-  flex-direction: column;
-}
+@media (min-width: 600px) {
+  .parallax-container {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: visible;
+    perspective: 8px;
+    perspective-origin: 0%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
 
-.parallax {
-  transform-origin: left;
-  overflow-y: visible;
-}
+  .parallax {
+    transform-origin: left;
+    overflow-y: visible;
+  }
 
-.parallax-image {
-  overflow-y: visible;
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-  position: absolute;
-  left: 0;
-  width: 100vw;
-  height: 600px;
-}
+  .parallax-image {
+    overflow-y: visible;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+    position: absolute;
+    left: 0;
+    width: 100vw;
+    height: 600px;
+  }
 
-.parallax-mtn1 {
-  transform: translateZ(1px) scale(1);
-}
-.parallax-mtn1 .mtn-1 {
-  background: url(../images/mtn1.svg);
-  top: 200px;
-}
+  .parallax-background {
+    background: linear-gradient(to bottom, #b9e3e7 0%, #f6fbef 30%);
+  }
 
-.parallax-mtn2 {
-  transform: translateZ(1.5px) scale(1);
-}
-.parallax-mtn2 .mtn-2 {
-  background: url(../images/mtn2.svg);
-  top: 250px;
-}
+  .parallax-mtn1 {
+    transform: translateZ(1px) scale(1);
+  }
+  .parallax-mtn1 .mtn-1 {
+    background: url(../images/mtn1.svg) repeat-x;
+    top: 200px;
+  }
 
-.parallax-fir {
-  transform: translateZ(2px) scale(0.9);
-}
-.parallax-fir .fir {
-  background: url(../images/fir.svg) repeat-x;
-  background-size: auto 500px;
-  background-position: right;
-  top: 300px;
-}
+  .parallax-mtn2 {
+    transform: translateZ(1.5px) scale(1);
+  }
+  .parallax-mtn2 .mtn-2 {
+    background: url(../images/mtn2.svg) repeat-x;
+    top: 250px;
+  }
 
-.parallax-larch {
-  transform: translateZ(2.5px) scale(1);
-}
-.parallax-larch .larch {
-  background: url(../images/larch.svg) repeat-x;
-  background-size: auto 500px;
-  top: 300px;
-}
+  .parallax-fir {
+    transform: translateZ(2px) scale(0.9);
+  }
+  .parallax-fir .fir {
+    background: url(../images/fir.svg) repeat-x;
+    background-size: auto 500px;
+    background-position: right;
+    top: 300px;
+  }
 
-.parallax-cedar {
-  transform: translateZ(3px) scale(0.7);
-}
-.parallax-cedar .cedar {
-  background: url(../images/cedar.svg) repeat-x;
-  background-size: auto 500px;
-  top: 600px;
-}
+  .parallax-larch {
+    transform: translateZ(2.5px) scale(1);
+  }
+  .parallax-larch .larch {
+    background: url(../images/larch.svg) repeat-x;
+    background-size: auto 500px;
+    top: 300px;
+  }
 
-.parallax-birch {
-  transform: translateZ(3.5px) scale(0.7);
-}
-.parallax-birch .birch {
-  background: url(../images/birch.svg) repeat-x;
-  background-size: auto 500px;
-  background-position: left;
-  top: 640px;
-}
+  .parallax-cedar {
+    transform: translateZ(3px) scale(0.7);
+  }
+  .parallax-cedar .cedar {
+    background: url(../images/cedar.svg) repeat-x;
+    background-size: auto 500px;
+    top: 600px;
+  }
 
+  .parallax-birch {
+    transform: translateZ(3.5px) scale(0.7);
+  }
+  .parallax-birch .birch {
+    background: url(../images/birch.svg) repeat-x;
+    background-size: auto 500px;
+    background-position: left;
+    top: 640px;
+  }
+}
 footer {
   position: relative;
 }
