--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -443,152 +443,161 @@ li:nth-child(5n) .category-link:hover, li:nth-child(5n) .category-link:focus, li
   transform: scale(2.6);
 }
 
-.card:after {
-  position: absolute;
-  content: "";
-  top: -2px;
-  right: 50%;
-  width: 7.26rem;
-  height: 4.1rem;
-  transform: translateX(50%);
-  background-image: radial-gradient(circle at top, #f6fbef 50%, #90cd5f 51%);
-  clip-path: circle(50% at 50% 0);
+@supports (clip-path: circle()) {
+  .card::after {
+    position: absolute;
+    content: "";
+    top: -2px;
+    right: 50%;
+    width: 7.26rem;
+    height: 4.1rem;
+    transform: translateX(50%);
+    background-image: radial-gradient(circle at top, #f6fbef 50%, #90cd5f 51%);
+    clip-path: circle(50% at 50% 0);
+  }
 }
-
 @media (min-width: 600px) {
-  .parallax-container {
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: visible;
-    perspective: 8px;
-    perspective-origin: 0%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
+  @supports (display: flex) {
+    .parallax-container {
+      position: absolute;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow-x: hidden;
+      overflow-y: visible;
+      perspective: 8px;
+      perspective-origin: 0%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+    }
 
-  .parallax {
-    transform-origin: left;
-    overflow-y: visible;
-  }
+    .parallax {
+      transform-origin: left;
+      overflow-y: visible;
+    }
 
-  .parallax-image {
-    overflow-y: visible;
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
-    position: absolute;
-    left: 0;
-    width: 100vw;
-    height: 600px;
-  }
+    .parallax-image {
+      overflow-y: visible;
+      background-size: cover;
+      background-position: center;
+      z-index: -1;
+      position: absolute;
+      left: 0;
+      width: 100vw;
+      height: 600px;
+    }
 
-  .parallax-background {
-    background: linear-gradient(to bottom, #b9e3e7 0%, #f6fbef 30%);
-  }
+    .parallax-background {
+      background: linear-gradient(to bottom, #b9e3e7 0%, #f6fbef 30%);
+    }
 
-  .parallax-mtn1 {
-    transform: translateZ(1px) scale(1);
-  }
-  .parallax-mtn1 .mtn-1 {
-    background: url(../images/mtn1.svg) repeat-x;
-    top: 200px;
-  }
+    .parallax-mtn1 {
+      transform: translateZ(1px) scale(1);
+    }
+    .parallax-mtn1 .mtn-1 {
+      background: url(../images/mtn1.svg) repeat-x;
+      top: 200px;
+    }
 
-  .parallax-mtn2 {
-    transform: translateZ(1.5px) scale(1);
-  }
-  .parallax-mtn2 .mtn-2 {
-    background: url(../images/mtn2.svg) repeat-x;
-    top: 250px;
-  }
+    .parallax-mtn2 {
+      transform: translateZ(1.5px) scale(1);
+    }
+    .parallax-mtn2 .mtn-2 {
+      background: url(../images/mtn2.svg) repeat-x;
+      top: 250px;
+    }
 
-  .parallax-fir {
-    transform: translateZ(2px) scale(0.9);
-  }
-  .parallax-fir .fir {
-    background: url(../images/fir.svg) repeat-x;
-    background-size: auto 500px;
-    background-position: right;
-    top: 300px;
-  }
+    .parallax-fir {
+      transform: translateZ(2px) scale(0.9);
+    }
+    .parallax-fir .fir {
+      background: url(../images/fir.svg) repeat-x;
+      background-size: auto 500px;
+      background-position: right;
+      top: 300px;
+    }
 
-  .parallax-larch {
-    transform: translateZ(2.5px) scale(1);
-  }
-  .parallax-larch .larch {
-    background: url(../images/larch.svg) repeat-x;
-    background-size: auto 500px;
-    top: 300px;
-  }
+    .parallax-larch {
+      transform: translateZ(2.5px) scale(1);
+    }
+    .parallax-larch .larch {
+      background: url(../images/larch.svg) repeat-x;
+      background-size: auto 500px;
+      top: 300px;
+    }
 
-  .parallax-cedar {
-    transform: translateZ(3px) scale(0.7);
-  }
-  .parallax-cedar .cedar {
-    background: url(../images/cedar.svg) repeat-x;
-    background-size: auto 500px;
-    top: 600px;
-  }
+    .parallax-cedar {
+      transform: translateZ(3px) scale(0.7);
+    }
+    .parallax-cedar .cedar {
+      background: url(../images/cedar.svg) repeat-x;
+      background-size: auto 500px;
+      top: 600px;
+    }
 
-  .parallax-birch {
-    transform: translateZ(3.5px) scale(0.7);
-  }
-  .parallax-birch .birch {
-    background: url(../images/birch.svg) repeat-x;
-    background-size: auto 500px;
-    background-position: left;
-    top: 640px;
+    .parallax-birch {
+      transform: translateZ(3.5px) scale(0.7);
+    }
+    .parallax-birch .birch {
+      background: url(../images/birch.svg) repeat-x;
+      background-size: auto 500px;
+      background-position: left;
+      top: 640px;
+    }
   }
 }
-footer {
-  position: relative;
-}
-
-footer p {
-  position: relative;
-  z-index: 1;
-}
-
-.container-waves {
-  width: 100vw;
-  position: absolute;
-  bottom: -10px;
-  transform: scaleY(2);
-}
-
-svg#waves {
-  overflow: visible;
-}
-
 .wave {
-  fill: #7bcbdf;
-  opacity: 0.4;
-  animation: wave 20s linear;
-  animation-iteration-count: infinite;
+  fill: transparent;
 }
 
-#wave2 {
-  fill: var(#3eb3d7);
-  animation-duration: 30s;
-}
-
-#wave3 {
-  fill: var(#009acf);
-  animation-duration: 40s;
-}
-
-@keyframes wave {
-  to {
-    transform: translateX(-100%);
+@supports (animation-name: waves) {
+  footer {
+    position: relative;
   }
-}
-@media (min-width: 900px) {
+
+  footer p {
+    position: relative;
+    z-index: 1;
+  }
+
   .container-waves {
-    transform: scaleY(1);
+    width: 100vw;
+    position: absolute;
+    bottom: -10px;
+    transform: scaleY(2);
+  }
+
+  svg#waves {
+    overflow: visible;
+  }
+
+  .wave {
+    fill: #7bcbdf;
+    opacity: 0.4;
+    animation: wave 20s linear;
+    animation-iteration-count: infinite;
+  }
+
+  #wave2 {
+    fill: var(#3eb3d7);
+    animation-duration: 30s;
+  }
+
+  #wave3 {
+    fill: var(#009acf);
+    animation-duration: 40s;
+  }
+
+  @keyframes wave {
+    to {
+      transform: translateX(-100%);
+    }
+  }
+  @media (min-width: 900px) {
+    .container-waves {
+      transform: scaleY(1);
+    }
   }
 }
 /* todo: make fun pop up animation */
