--- a/src/_includes/partials/business-card.njk
+++ b/src/_includes/partials/business-card.njk
@@ -43,7 +43,7 @@
           {% endif %}
           {% if listing.data.address or listing.data.showMap %}
             <div class="group">
-              <a class="block" href="/map?listing={{ listing.data.title | slug }}">
+              <a class="block" href="/map?listing={{ listing.data.title | replace("'", "") | slug }}">
                   <svg class="contact-icon">
                     <use xlink:href="#map-icon"></use>
                   </svg>{{ listing.data.address if listing.data.address else 'map'}}</a>
